<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/listViewBuddy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
    	android:listSelector="@drawable/bkg" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/buttonCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="makeCall"
            android:importantForAccessibility = "no"
            android:src="@android:drawable/ic_menu_call" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="   "
            android:importantForAccessibility = "no"/>

        <ImageButton
            android:id="@+id/buttonAddBuddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addBuddy"
            android:src="@android:drawable/ic_menu_add"
            android:importantForAccessibility = "no" />
        
        <ImageButton
            android:id="@+id/buttonEditBuddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="editBuddy"
            android:importantForAccessibility = "no"
            android:src="@android:drawable/ic_menu_edit" />
        
        <ImageButton
            android:id="@+id/buttonDelBuddy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delBuddy"
            android:importantForAccessibility = "no"
            android:src="@android:drawable/ic_menu_delete" />

        </LinearLayout>

</LinearLayout>