...
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SurfaceView
            android:id="@+id/surfaceIncomingVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <SurfaceView
            android:id="@+id/surfacePreviewCapture"
            android:layout_width="0dp"
...
